Implemented the AOTA add-in to work using the interfaces in Occult.SDK.dll

--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -51,5 +51,8 @@
     </system.serviceModel>
     <runtime>
         <loadFromRemoteSources  enabled="true"/>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+           <probing privatePath="bin;Addins"/>
+        </assemblyBinding>
     </runtime>
 </configuration>
