Shielded all actual calls to OccultUtilities in the AOTA Add-in in order to distinguish between AOTA errors vs AOTA Addin errors. Made the Debug TangraVideo build to not require the C++ Runtime.

--- a/Tangra.Video/Windows/Tangra.Video.vcxproj
+++ b/Tangra.Video/Windows/Tangra.Video.vcxproj
@@ -97,6 +97,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;TANGRAVIDEO_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>
       </AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
