Added plumping to read the NTP timestamps from AAV files.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ _ReSharper.*
 
 /Tangra.Core/cppcheck.list
 /Tangra.Core/cscope_file.list
+/Tangra.Video/Windows/Tangra.Video.opensdf
+/Work/AviDemo
+/Work/AviFile
