--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -244,6 +244,12 @@
     <Compile Include="Helpers\DuplicateFrameAvoider.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\FITSHelper.cs" />
+    <Compile Include="Video\AstroDigitalVideo\frmBuildingNtpTimebase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Video\AstroDigitalVideo\frmBuildingNtpTimebase.Designer.cs">
+      <DependentUpon>frmBuildingNtpTimebase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\NotificationManager.cs" />
     <Compile Include="Helpers\TangraEnvironment.cs" />
     <Compile Include="Helpers\ZipUnzip.cs" />
@@ -558,6 +564,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmUnhandledException.resx">
       <DependentUpon>frmUnhandledException.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Video\AstroDigitalVideo\frmBuildingNtpTimebase.resx">
+      <DependentUpon>frmBuildingNtpTimebase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
