Implemented a double PSF fit (without background modelling). Made it possible to add targets for Multual Events. UI work on the Mutual Event's add target form. Minor refacroting of the usage of the PSFFit class.

--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Astro\AstroImage.cs" />
+    <Compile Include="Astro\DoublePSFFit.cs" />
     <Compile Include="Astro\StarFinder.cs" />
     <Compile Include="Astro\PSFFit.cs" />
     <Compile Include="Config\AavSettings.cs" />
