--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -266,6 +266,7 @@
     <Compile Include="VideoOperations\LightCurves\MutualEvents\frmAddOrEditMutualEventsTarget.Designer.cs">
       <DependentUpon>frmAddOrEditMutualEventsTarget.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\Tracking\MutualEventTracker.cs" />
     <Compile Include="Video\AstroDigitalVideo\frmBuildingNtpTimebase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -586,6 +587,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTargetPSFViewerForm.resx">
       <DependentUpon>frmTargetPSFViewerForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUnhandledException.resx">
       <DependentUpon>frmUnhandledException.cs</DependentUpon>
