--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Astro\Background3DPolynomialFit.cs" />
     <Compile Include="Astro\AstroImage.cs" />
     <Compile Include="Astro\DoublePSFFit.cs" />
     <Compile Include="Astro\StarFinder.cs" />
