Refactored the usage and sharing of the measurements from the LCFile and the re-processing. This should now use less memory and re-processing will always work from the original measurements making multiple re-processings possible without the need of extra memory usage.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -213,6 +213,7 @@
     </Compile>
     <Compile Include="Config\InstrumentalDelayConfigManager.cs" />
     <Compile Include="Controller\AutoUpdatesController.cs" />
+    <Compile Include="Controller\LightCurveContext.cs" />
     <Compile Include="Controller\LightCurveController.cs" />
     <Compile Include="Controller\DarkFlatFrameController.cs" />
     <Compile Include="Controller\VideoController.cs" />
