--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -283,6 +283,13 @@
     <Compile Include="Helpers\FITSHelper.cs" />
     <Compile Include="Helpers\TangraFileAssociations.cs" />
     <Compile Include="Helpers\WindowsHelpers.cs" />
+    <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.Designer.cs">
+      <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\InfoForms\MagnitudeConverter.cs" />
     <Compile Include="VideoOperations\LightCurves\MutualEvents\frmAddOrEditMutualEventsTarget.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -619,6 +626,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmUnhandledException.resx">
       <DependentUpon>frmUnhandledException.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmSetReferenceMag.resx">
+      <DependentUpon>frmSetReferenceMag.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\MutualEvents\frmAddOrEditMutualEventsTarget.resx">
       <DependentUpon>frmAddOrEditMutualEventsTarget.cs</DependentUpon>
