--- a/AdvLib.Core/AdvLib.Core.vcxproj
+++ b/AdvLib.Core/AdvLib.Core.vcxproj
@@ -221,7 +221,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="adv_cross_platform.h" />
+    <ClInclude Include="cross_platform.h" />
     <ClInclude Include="adv_file.h" />
     <ClInclude Include="adv_frames_index.h" />
     <ClInclude Include="adv_image_layout.h" />
@@ -231,12 +231,11 @@
     <ClInclude Include="adv_status_section.h" />
     <ClInclude Include="quicklz.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AdvLib.Core.cpp" />
-    <ClCompile Include="adv_cross_platform.cpp" />
+    <ClCompile Include="cross_platform.cpp" />
     <ClCompile Include="adv_file.cpp" />
     <ClCompile Include="adv_frames_index.cpp" />
     <ClCompile Include="adv_image_layout.cpp" />
