--- a/AdvLib.Core/AdvLib.Core.vcxproj
+++ b/AdvLib.Core/AdvLib.Core.vcxproj
@@ -26,6 +26,43 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\AdvLib.Core.cpp" />
+    <ClCompile Include="src\adv_file.cpp" />
+    <ClCompile Include="src\adv_frames_index.cpp" />
+    <ClCompile Include="src\adv_image_layout.cpp" />
+    <ClCompile Include="src\adv_image_section.cpp" />
+    <ClCompile Include="src\adv_lib.cpp" />
+    <ClCompile Include="src\adv_profiling.cpp" />
+    <ClCompile Include="src\adv_status_section.cpp" />
+    <ClCompile Include="src\cross_platform.cpp" />
+    <ClCompile Include="src\dllmain.cpp" />
+    <ClCompile Include="src\quicklz.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="src\stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="src\utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\adv_file.h" />
+    <ClInclude Include="src\adv_frames_index.h" />
+    <ClInclude Include="src\adv_image_layout.h" />
+    <ClInclude Include="src\adv_image_section.h" />
+    <ClInclude Include="src\adv_lib.h" />
+    <ClInclude Include="src\adv_profiling.h" />
+    <ClInclude Include="src\adv_status_section.h" />
+    <ClInclude Include="src\cross_platform.h" />
+    <ClInclude Include="src\quicklz.h" />
+    <ClInclude Include="src\stdafx.h" />
+    <ClInclude Include="src\utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\AdvLib.Core.def" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D95C7815-F060-4023-99A1-865CE88FE3A5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -125,6 +162,8 @@
       </SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <AdditionalIncludeDirectories>src</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>src</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -133,7 +172,7 @@
       </EnableCOMDATFolding>
       <OptimizeReferences>
       </OptimizeReferences>
-      <ModuleDefinitionFile>AdvLib.Core.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>src/AdvLib.Core.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -147,13 +186,16 @@
       <SDLCheck>
       </SDLCheck>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>src</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>src</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ModuleDefinitionFile>AdvLib.Core.def</ModuleDefinitionFile>
+      <ModuleDefinitionFile>src/AdvLib.Core.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|Win32'">
@@ -220,70 +262,6 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="cross_platform.h" />
-    <ClInclude Include="adv_file.h" />
-    <ClInclude Include="adv_frames_index.h" />
-    <ClInclude Include="adv_image_layout.h" />
-    <ClInclude Include="adv_image_section.h" />
-    <ClInclude Include="adv_lib.h" />
-    <ClInclude Include="adv_profiling.h" />
-    <ClInclude Include="adv_status_section.h" />
-    <ClInclude Include="quicklz.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="utils.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="AdvLib.Core.cpp" />
-    <ClCompile Include="cross_platform.cpp" />
-    <ClCompile Include="adv_file.cpp" />
-    <ClCompile Include="adv_frames_index.cpp" />
-    <ClCompile Include="adv_image_layout.cpp" />
-    <ClCompile Include="adv_image_section.cpp" />
-    <ClCompile Include="adv_lib.cpp" />
-    <ClCompile Include="adv_profiling.cpp" />
-    <ClCompile Include="adv_status_section.cpp" />
-    <ClCompile Include="dllmain.cpp">
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</CompileAsManaged>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-      </PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      </PrecompiledHeader>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</CompileAsManaged>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|Win32'">false</CompileAsManaged>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</CompileAsManaged>
-      <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|x64'">false</CompileAsManaged>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      </PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|Win32'">
-      </PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|x64'">
-      </PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="quicklz.c">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|Win32'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|x64'">NotUsing</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release - Non Windows|x64'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="utils.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="AdvLib.Core.def" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
